Fix missing borders in multi row layout and remove border on hover for bootstrap themes

--- a/src/css/themes/bootstrap3/superhero/infragistics.theme.css
+++ b/src/css/themes/bootstrap3/superhero/infragistics.theme.css
@@ -3124,6 +3124,9 @@ body .ui-tooltip {
 .ui-iggrid .ui-iggrid-table-mrl tbody td {
   border: 1px solid #4E5D6C;
 }
+.ui-iggrid .ui-iggrid-table-mrl tbody .ui-iggrid-altrecord td {
+  border: 1px solid #39444e;
+}
 /* footer summary tables*/
 .ui-iggrid tfoot td {
   border-color: #4E5D6C;
@@ -3268,6 +3271,9 @@ body .ui-tooltip {
 .ui-iggrid tbody td {
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
+}
+.ui-iggrid tbody td.ui-state-hover {
+  border-color: transparent;
 }
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
   border-right: 1px solid #4E5D6C;
