--- a/src/css/themes/bootstrap3/yeti/modules/infragistics.ui.grid.less
+++ b/src/css/themes/bootstrap3/yeti/modules/infragistics.ui.grid.less
@@ -289,6 +289,10 @@
   border-right: 1px solid transparent;
 }
 
+.ui-iggrid tbody td.ui-state-hover {
+  border-color: transparent;
+}
+
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
   border-right: 1px solid @table-border-color;
 }
