--- a/src/css/themes/infragistics/infragistics.theme.css
+++ b/src/css/themes/infragistics/infragistics.theme.css
@@ -3182,7 +3182,8 @@ input.ui-igbutton {
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
 }
-.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
+.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable,
+.ui-iggrid .ui-iggrid-table-mrl tbody td {
   border-right: 1px solid #dadada;
 }
 /* END 246065 */
