--- a/src/css/themes/infragistics/modules/infragistics.ui.grid.less
+++ b/src/css/themes/infragistics/modules/infragistics.ui.grid.less
@@ -277,7 +277,8 @@
   border-right: 1px solid transparent;
 }
 
-.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
+.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable,
+.ui-iggrid .ui-iggrid-table-mrl tbody td  {
   border-right: 1px solid @table-border-color;
 }
 /* END 246065 */
