--- a/src/css/themes/metro/modules/infragistics.ui.grid.less
+++ b/src/css/themes/metro/modules/infragistics.ui.grid.less
@@ -4,13 +4,14 @@
 
 /* Bug 214415 18.02.2016 S.D. Missing borders; new classes for a MRL grid */
 .ui-iggrid-table-mrl .ui-widget-content td {
-  border: 1px solid rgba(153, 153, 153, 0.06) !important;
+  border: 1px solid @table-border-color !important;
 }
-.ui-iggrid-table-mrl .ui-widget-content td.ui-state-hover,.ui-iggrid-table-mrl .ui-widget-content .ui-iggrid-altrecord td.ui-state-hover {
-  border: 1px solid #b1b1b1 !important;
+.ui-iggrid-table-mrl .ui-widget-content td.ui-state-hover,
+.ui-iggrid-table-mrl .ui-widget-content .ui-iggrid-altrecord td.ui-state-hover {
+  border: 1px solid darken(@table-border-color, 5%) !important;
 }
 .ui-iggrid .ui-iggrid-headertable-mrl th,.ui-iggrid .ui-iggrid-table-mrl th {
-  border: 2px solid #00aade !important;
+  border: 1px solid @table-border-color !important;
 }
 
 .ui-iggrid {
@@ -164,7 +165,7 @@
 .ui-iggrid .ui-ig-altrecord td,
 .ui-iggrid .ui-ig-altrecord th.ui-iggrid-rowselector-class,
 .ui-iggrid tbody .ui-ig-altrecord td.ui-state-default {
-  border-color: #e3e3e3 white white #e3e3e3;
+  border-color: @table-border-color white white @table-border-color;
   border-width: 1px;
 }
 /*sorting*/
